--- a/config/app.toml
+++ b/config/app.toml
@@ -1,13 +1,16 @@
+[log]
+level = "info"
+console_enabled = "true"
+
 [cache]
 type = "redis"
 host = "127.0.0.1:6379"
-password = "isvcloud2019_cloud_isv_cn"
+password = "564710"
 
 [rpcserver]
-host="172.17.102.29"
-port="16670"
+host="127.0.0.1"
+port="94710"
 
-[inline]
-factory_name="inline"
-station_name="inline"
-station_num="inline"
+[sample]
+name="samle"
+no="123"
